	* decode.c: new pipeline stage that decouples instruction decode from
		instruction fetch.
	* fetch.c: processor front-end redesigned and reimplemented with
		a detailed documentation in the m2s-doc project.
		Fetch policies made code at fetch too complex. They are
		removed for the next version.

2009-11-23
	Version 2.2 Released

2009-11-24
	* uop.c: 'dep_map' updated. Dependence DDF was not present.
	* libstruct/debug.c: function 'dump_buf' implemented.

2009-12-02
	* libcachesystem/cache.c: new option to configure block replacement
		policy in the cache config file.
	* libmisc/misc.c: function 'map_string_case'
	* stat 'evicts' added to caches

2009-12-03
	* libstruct/config.c: bug fixed in function 'trim'. Tabs were not
		deleted at the beginning and end of strings.
	* libstruct/cachesystem.c: TLB section set as optional in cache
		configuration file.

2009-12-09
	* libm2skernel/elf.c: bug fixed. There was a segmentation fault
		when a non-existing executable file was tried to be
		loaded.

2009-12-17
	* tcache.c, processor.c: stats 'committed', 'squashed', 'accesses',
		'hits', and 'hitratio' for trace cache.
	* tcache.c: Change uop_max for trace_size.
		Function tcache_commit_trace changed to tcache_flush_trace.
		Stat 'tcache.trace_length' added, indicating the average trace
		length (depends on max branches and uops alignment).

2009-12-18
	* libmhandle/mhandle.c: list storing freed pointers removed. This
		caused used memory to grown indefinitely when pointers
		were constantly allocated and deallocated.
	* processor.c, m2s.c: processor stats dumped into debug:error file
		after SIGABRT received.

2009-12-22
	* libmhandle: memory overhead of libmhandle is too high to make it by
		default. DMHANDLE directive is removed in Makefile.am.
	* memory.c: global variable mem_mapped_space.
	* processor.c: stat sim.memory changes meaning.

2009-12-31
	* libstruct/repos.c: implementation improved to provide function
		repos_free_dump to dump objects not freed.